# OpenGL-project

./: .gitignore  Animals.cpp  CMakeLists.txt  Lab04  Main.cpp  Makefile  Project  cuboid.cpp  fun.h  imgui.ini  rectangle.cpp  temp  test  utils.cpp
Sketch-Based-Animations-main/src/: Main.cpp
shaders/: fshader.fs  vshader.vs
src/: Ground.cpp  Hill.cpp  Main.cpp  Nature.cpp  Planets.cpp  Sky.cpp  fun.h  how_to_run.txt  main  main.cpp  utils.cpp  utils.h
